# doorman

./: .gitignore  Cargo.nix  Cargo.toml  Readme.md  flake.nix
src/: lib.rs  main.rs  manager.rs  registry.rs
src/bluetooth/: cli.rs  detector.rs  device.rs  mod.rs
src/discord/: authenticator.rs  cli.rs  client.rs  locker.rs  mod.rs
src/interfaces/: mod.rs  services.rs
src/rpi_servo/: actuator.rs
src/simple/: actuator.rs  authenticator.rs  detector.rs  device.rs  locker.rs  mod.rs
