[package]
name = "doorman"
version = "0.1.0"
authors = ["Yannik Sander <ysander@techfak.uni-bielefeld.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity="0.10"
thiserror="1.0"
anyhow="1.0"
async-trait="0.1"
derive_more="0.99"
log="0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.8"
