[package]
name = "doorman"
version = "0.1.0"
authors = ["Yannik Sander <yannik@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.10", features = ["collector"], optional = true }
thiserror="1.0"
anyhow="1.0"
async-trait="0.1"
derive_more="0.99"
log="0.4"
tokio = { version = "1", features = [ "rt-multi-thread", "macros", "time", "io-util", "fs" ] }
env_logger = "0.8"
clap="3.0.0-beta.2"
dotenv="0.15"
cfg-if="1.0"
futures="0.3"
bluez = { version = "0.3", optional = true }
serde = {version="1.0",  features = ["derive"]}
serde_json = "1.0"
rppal = { version = "0.12", features = [ "hal" ] }


[features]
discord = ["discord_auth"]
discord_auth = [ "discord_base" ]
discord_base = [ "serenity" ]
bluetooth = [ "bluez" ]
